# Prolog-Forge

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
adapters/vscode/: README.md  package.json
adapters/vscode/src/: client.js  extension.js
crates/aa-cli/: Cargo.toml
crates/aa-cli/src/: main.rs
crates/aa-core/: Cargo.toml
crates/aa-core/src/: apply.rs  handlers.rs  index.rs  journal.rs  lib.rs  lower.rs  memory.rs  ra_pool.rs  rollback.rs  session.rs  test_impact.rs  validate_stages.rs
crates/aa-csm/: Cargo.toml
crates/aa-daemon/: Cargo.toml
crates/aa-daemon/src/: main.rs
crates/aa-explain/: Cargo.toml
crates/aa-explain/src/: builder.rs  lib.rs  model.rs
crates/aa-graph/: Cargo.toml
crates/aa-graph/src/: lib.rs
crates/aa-ingest/: Cargo.toml
crates/aa-ingest/src/: lib.rs
crates/aa-lang-rust/: Cargo.toml
crates/aa-lang-rust/src/: lib.rs
crates/aa-llm/: Cargo.toml
crates/aa-llm/src/: cache.rs  context.rs  prompt.rs  propose.rs  propose_patch.rs  provider.rs  refine.rs
crates/aa-patch/: Cargo.toml
crates/aa-patch/src/: add_derive.rs  change_sig.rs  extract.rs  inline.rs  lib.rs  move_item.rs  ops.rs  plan.rs  rust_rename.rs  typed_rename.rs  util.rs
crates/aa-persist/: Cargo.toml
crates/aa-persist/src/: lib.rs
crates/aa-protocol/: Cargo.toml
crates/aa-protocol/src/: api.rs  lib.rs  message.rs  transport.rs
crates/aa-ra-client/: Cargo.toml
crates/aa-ra-client/src/: client.rs  framing.rs  lib.rs  mock.rs  retry.rs  session.rs  transport.rs  types.rs
crates/aa-rules/: Cargo.toml
crates/aa-rules/src/: eval.rs  lib.rs  parser.rs  trace.rs
crates/aa-validate/: Cargo.toml
crates/aa-validate/src/: lib.rs  pipeline.rs
crates/pf-cli/: Cargo.toml
crates/pf-cli/src/: main.rs
crates/pf-core/: Cargo.toml
crates/pf-core/src/: apply.rs  handlers.rs  index.rs  journal.rs  lib.rs  lower.rs  memory.rs  ra_pool.rs  session.rs  test_impact.rs  validate_stages.rs
crates/pf-csm/: Cargo.toml
crates/pf-csm/src/: lib.rs
crates/pf-daemon/: Cargo.toml
crates/pf-daemon/src/: main.rs
crates/pf-explain/: Cargo.toml
crates/pf-explain/src/: builder.rs  lib.rs  model.rs
crates/pf-graph/: Cargo.toml
crates/pf-graph/src/: lib.rs
crates/pf-ingest/: Cargo.toml
crates/pf-ingest/src/: lib.rs
crates/pf-lang-rust/: Cargo.toml
crates/pf-lang-rust/src/: lib.rs
crates/pf-llm/: Cargo.toml
crates/pf-llm/src/: cache.rs  context.rs  lib.rs  prompt.rs  propose.rs  propose_patch.rs  provider.rs  refine.rs
crates/pf-patch/: Cargo.toml
crates/pf-patch/src/: add_derive.rs  lib.rs  ops.rs  plan.rs  rust_rename.rs  typed_rename.rs
crates/pf-persist/: Cargo.toml
crates/pf-protocol/: Cargo.toml
crates/pf-protocol/src/: api.rs  lib.rs
crates/pf-ra-client/: Cargo.toml
crates/pf-ra-client/src/: client.rs  lib.rs  mock.rs  session.rs  types.rs
crates/pf-rules/: Cargo.toml
crates/pf-rules/src/: ast.rs  eval.rs  lib.rs  trace.rs
crates/pf-validate/: Cargo.toml
crates/pf-validate/src/: stage.rs  stages.rs
docs/: RELEASING.md  architecture.md  protocol.md  rules-dsl.md
examples/rust-demo/: Cargo.toml  rules.pfr
examples/rust-demo/src/: lib.rs
schemas/: protocol.json
tooling/: preflight.sh
tooling/smoke/: daemon_smoke.py
