[workspace]
resolver = "2"
# Keep test fixtures out of the main build so stages like CargoCheckStage
# can treat them as independent crates.
exclude = ["examples"]
members = [
    "crates/aa-protocol",
    "crates/aa-csm",
    "crates/aa-graph",
    "crates/aa-rules",
    "crates/aa-persist",
    "crates/aa-ingest",
    "crates/aa-lang-rust",
    "crates/aa-llm",
    "crates/aa-patch",
    "crates/aa-validate",
    "crates/aa-explain",
    "crates/aa-ra-client",
    "crates/aa-core",
    "crates/aa-daemon",
    "crates/aa-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/maribakulj/prolog-forge"
authors = ["AYE-AYE contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.2", features = ["serde"] }

aa-protocol = { path = "crates/aa-protocol" }
aa-csm = { path = "crates/aa-csm" }
aa-graph = { path = "crates/aa-graph" }
aa-rules = { path = "crates/aa-rules" }
aa-persist = { path = "crates/aa-persist" }
aa-ingest = { path = "crates/aa-ingest" }
aa-lang-rust = { path = "crates/aa-lang-rust" }
aa-llm = { path = "crates/aa-llm" }
aa-patch = { path = "crates/aa-patch" }
aa-validate = { path = "crates/aa-validate" }
aa-explain = { path = "crates/aa-explain" }
aa-ra-client = { path = "crates/aa-ra-client" }
aa-core = { path = "crates/aa-core" }

[profile.release]
lto = "thin"
codegen-units = 1
