[package]
name = "aa-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AYE-AYE daemon binary (stdio JSON-RPC server)"

[[bin]]
name = "aa-daemon"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aa-protocol.workspace = true
aa-core.workspace = true
