[package]
name = "aa-lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust language analyzer (syn-based) — lowers source to CSM fragments"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
aa-csm.workspace = true
