[package]
name = "aa-patch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed patch planner: structured ops on source, shadow simulation, diff rendering"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
similar = "2.7"
aa-ra-client.workspace = true
tempfile = "3"
