[package]
name = "pf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prolog Forge CLI — reference adapter and CI tool"

[[bin]]
name = "pf"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
pf-protocol.workspace = true
pf-core.workspace = true
pf-rules.workspace = true
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
