[package]
name = "pf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session manager and API handlers for the Prolog Forge Core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
pf-protocol.workspace = true
pf-graph.workspace = true
pf-rules.workspace = true
pf-persist.workspace = true
pf-csm.workspace = true
pf-ingest.workspace = true
pf-lang-rust.workspace = true
pf-llm.workspace = true
pf-patch.workspace = true
pf-validate.workspace = true
pf-explain.workspace = true
pf-ra-client.workspace = true
tempfile = "3"
walkdir = "2"
