[package]
name = "pf-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prolog Forge daemon binary (stdio JSON-RPC server)"

[[bin]]
name = "pf-daemon"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pf-protocol.workspace = true
pf-core.workspace = true
