[package]
name = "pf-explain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proof-carrying explanations for Prolog Forge patches (neuro-symbolic justification builder)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
pf-protocol.workspace = true
pf-graph.workspace = true
pf-rules.workspace = true
