[package]
name = "pf-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Knowledge graph store (triples, indexes, pattern matching) for Prolog Forge"

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
pf-protocol.workspace = true
