[package]
name = "pf-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bounded LLM orchestrator: provider trait, context builder, schema-validated I/O, response cache"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
pf-graph.workspace = true
pf-protocol.workspace = true
