[package]
name = "pf-ra-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal LSP client for rust-analyzer: spawn-per-operation, scope-resolved rename"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
