[package]
name = "pf-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Datalog-v1 rule engine for Prolog Forge (Prolog-flavored surface syntax)"

[dependencies]
serde.workspace = true
thiserror.workspace = true
pf-graph.workspace = true
pf-protocol.workspace = true
