[package]
name = "pf-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Validation pipeline: pluggable stages that gate every patch apply"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
syn = { version = "2", features = ["full"] }
